--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,4 +20,4 @@ jobs:
           kakao_access_token: ${{ secrets.KAKAO_ACCESS_TOKEN }}
           function_name: send_to_me_custom
           template_id: "109803"
-          template_args: '{"title": "제목", "desc": "설명"}'
+          #template_args: '{"title": "제목", "desc": "설명"}'
