--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,4 +23,4 @@ jobs:
           kakao_access_token: ${{ secrets.KAKAO_ACCESS_TOKEN }}
           function_name: send_to_me_custom
           template_id: "93112"
-          template_args: {"title": "${{ github.event_name }}", "desc": "${{ github.event_name }}! Please check it."}
+          template_args: '{"title": "${{ github.event_name }}", "desc": "${{ github.event_name }}! Please check it."}'
