--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,4 +24,4 @@ jobs:
           function_name: send_to_me_custom
           template_id: "109803"
           # template_args: '{"title": "${{ github.event_name }}", "desc": "${{ github.event_name }}! Please check it."}'
-          template_args: '{"title": "${{ github.event_name }}", "desc": "Commit message: /n ${{ github.event.head_commit.message }}"}'
+          template_args: '{"title": "${{ github.event_name }}", "desc": "${{ github.event.head_commit.message }}"}'
