--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Example CI
+name: CI Message
 
 on:
   push:
@@ -16,12 +16,19 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Get commit message
+        id: get_commit_message
+        run: |
+          echo "COMMIT_MESSAGE=$(git log -1 --pretty=%B)" >> $GITHUB_ENV
+
       - name: Send KakaoTalk notification
+        if: failure()  # Uncommented the conditional execution
         uses: Alfex4936/kakaotalk-ci-action@main
-        # if: failure()
         with:
           kakao_access_token: ${{ secrets.KAKAO_ACCESS_TOKEN }}
           function_name: send_to_me_custom
           template_id: "109803"
           # template_args: '{"title": "${{ github.event_name }}", "desc": "${{ github.event_name }}! Please check it."}'
-          template_args: '{"title": "${{ github.event_name }}", "desc": "${{ github.event.head_commit.message }}"}'
+          # template_args: '{"title": "${{ github.event_name }}", "desc": "${{ github.event.head_commit.message }}"}'
+          template_args: '{"title": "${{ github.event_name }}", "desc": "${{ env.COMMIT_MESSAGE }}"}'
+          
