--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,11 +19,27 @@ jobs:
       - name: Get commit message
         id: get_commit_message
         run: |
-          COMMIT_MESSAGE=$(git log -1 --pretty=%B)
-          COMMIT_MESSAGE="${COMMIT_MESSAGE//'%'/'%25'}"
-          COMMIT_MESSAGE="${COMMIT_MESSAGE//$'\n'/'%0A'}"
-          COMMIT_MESSAGE="${COMMIT_MESSAGE//$'\r'/'%0D'}"
-          echo "COMMIT_MESSAGE=$COMMIT_MESSAGE" >> $GITHUB_ENV
+          # Get the full commit message
+          FULL_COMMIT_MESSAGE=$(git log -1 --pretty=%B)
+          
+          # Split the commit message on the first empty line
+          COMMIT_TITLE=$(echo "$FULL_COMMIT_MESSAGE" | sed '/^$/q')
+          COMMIT_DESCRIPTION=$(echo "$FULL_COMMIT_MESSAGE" | sed '1,/^$/d')
+          
+          # Remove newlines and carriage returns from the description
+          COMMIT_DESCRIPTION=$(echo "$COMMIT_DESCRIPTION" | tr -d '\n' | tr -d '\r')
+          
+          # Escape special characters for GitHub environment variables
+          COMMIT_TITLE="${COMMIT_TITLE//'%'/'%25'}"
+          COMMIT_TITLE="${COMMIT_TITLE//$'\n'/'%0A'}"
+          COMMIT_TITLE="${COMMIT_TITLE//$'\r'/'%0D'}"
+          COMMIT_DESCRIPTION="${COMMIT_DESCRIPTION//'%'/'%25'}"
+          COMMIT_DESCRIPTION="${COMMIT_DESCRIPTION//$'\n'/'%0A'}"
+          COMMIT_DESCRIPTION="${COMMIT_DESCRIPTION//$'\r'/'%0D'}"
+          
+          # Save the variables to the GitHub environment
+          echo "COMMIT_TITLE=$COMMIT_TITLE" >> $GITHUB_ENV
+          echo "COMMIT_DESCRIPTION=$COMMIT_DESCRIPTION" >> $GITHUB_ENV
 
       - name: Send KakaoTalk notification
         # if: failure()
@@ -32,7 +48,5 @@ jobs:
           kakao_access_token: ${{ secrets.KAKAO_ACCESS_TOKEN }}
           function_name: send_to_me_custom
           template_id: "109803"
-          # template_args: '{"title": "${{ github.event_name }}", "desc": "${{ github.event_name }}! Please check it."}'
-          # template_args: '{"title": "${{ github.event_name }}", "desc": "${{ github.event.head_commit.message }}"}'
-          template_args: '{"title": "${{ github.event_name }}", "desc": "${{ env.COMMIT_MESSAGE }}"}'
+          template_args: '{"title": "${{ github.event_name }}", "desc": "${{ env.COMMIT_DESCRIPTION }}"}'
           
