--- a/.github/workflows/discord-notify.yml
+++ b/.github/workflows/discord-notify.yml
@@ -12,17 +12,54 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Send notification
-      if: always()
+    - name: Notify Push
+      if: github.event_name == 'push'
       uses: rjstone/discord-webhook-notify@v1
       with:
-        severity: ${{ job.status == 'success' && 'info' || 'error' }}
+        severity: info
         details: |
-          **Backend Repository: Workflow Notification**
+          **Backend Repository: Push Event**
           Repository: ${{ github.repository }}
-          Event: ${{ github.event_name }}
           Ref: ${{ github.ref }}
           Commit: ${{ github.sha }}
           Actor: ${{ github.actor }}
-          Status: ${{ job.status }}
+        webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+
+    - name: Notify Pull Request
+      if: github.event_name == 'pull_request'
+      uses: rjstone/discord-webhook-notify@v1
+      with:
+        severity: info
+        details: |
+          **Backend Repository: Pull Request Event**
+          Repository: ${{ github.repository }}
+          Action: ${{ github.event.action }}
+          Pull Request: ${{ github.event.pull_request.html_url }}
+          Actor: ${{ github.actor }}
+        webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+        
+    - name: Notify Failure
+      if: failure()
+      uses: rjstone/discord-webhook-notify@v1
+      with:
+        severity: error
+        details: |
+          **Backend Repository: Build or tests failed**
+          Repository: ${{ github.repository }}
+          Ref: ${{ github.ref }}
+          Commit: ${{ github.sha }}
+          Actor: ${{ github.actor }}
+        webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+
+    - name: Notify Warning
+      if: always() && failure() # Custom condition for warnings if applicable
+      uses: rjstone/discord-webhook-notify@v1
+      with:
+        severity: warn
+        details: |
+          **Backend Repository: Build or tests warning**
+          Repository: ${{ github.repository }}
+          Ref: ${{ github.ref }}
+          Commit: ${{ github.sha }}
+          Actor: ${{ github.actor }}
         webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
